# zk-cryptography-research-implementations-in-rust

./: .gitignore  README
cir/: Cargo.toml
cir/src/: main.rs
circuit/: Cargo.toml
circuit/src/: circuit.rs
circuits/: Cargo.toml
circuits/src/: main.rs
coruit/: Cargo.toml
coruit/src/: lib.rs  multilinear.rs
dense_polynomail/: Cargo.toml
dense_polynomail/src/: main.rs
fiat_shamir/: Cargo.toml
fiat_shamir/src/: lib.rs  main.rs
gkr/: Cargo.toml
gkr/src/: composite.rs  gkr.rs  grk.rs  lib.rs  main.rs
mult_poly/: Cargo.toml
mult_poly/src/: main.rs
multilinear/: Cargo.toml
multilinear/src/: composite.rs  main.rs  multilinear.rs
multilinear_poly/: Cargo.toml
multilinear_poly/src/: main.rs
polynomials/: dense_polynomial  dense_polynomial.rs  main  main.rs
prime_fields/prime_polynomail/src/: lib.rs
prime_fields/prime_sss/: Cargo.toml
prime_fields/prime_sss/src/: main.rs
prime_fields/shamir_prime/: Cargo.toml
prime_polynomail/: Cargo.toml
shamir_secret_sharing/: Cargo.toml
shamir_secret_sharing/src/: main.rs
sparse_polynomail/: Cargo.toml
sparse_polynomail/src/: main.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  main.rs  multilinear.rs  sumcheck.rs  transcript.rs
sumcheck_impl/: Cargo.toml
sumcheck_impl/src/: main.rs
sumcheck_protocol/: Cargo.toml
sumcheck_protocol/src/: main.rs
transcript/: Cargo.toml
transcript/src/: main.rs  transcript.rs
