[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
multilinear = { path = "../multilinear"}
prime_polynomail = { path = "../prime_polynomail"}
transcript = { path = "../transcript"}
sumcheck = { path = "../sumcheck"}
rand = "0.9.0"
sha3 = "0.10.8"
